# artisan-trading

./: .gitignore  README.md  api_test.py  ma_sim_H1.xlsx  ma_sim_H4.xlsx  ma_sim_M5.xlsx  main.py  pyproject.toml  requirements.txt  run_bot.py  scraping_tests.py  ~$ma_sim_H1.xlsx
api/: oanda_api.py  stream_prices.py
bot/: bot.py  candle_manager.py  settings.json  technicals_manager.py  trade_manager.py  trade_risk_calculated.py
constants/: defs.py
data/: AUD_CAD_H1.pkl  AUD_CAD_H4.pkl  AUD_CHF_H1.pkl  AUD_CHF_H4.pkl  AUD_JPY_H1.pkl  AUD_JPY_H4.pkl  AUD_NZD_H1.pkl  AUD_NZD_H4.pkl  AUD_USD_H1.pkl  AUD_USD_H4.pkl  CAD_CHF_H1.pkl  CAD_CHF_H4.pkl  CAD_JPY_H1.pkl  CAD_JPY_H4.pkl  CHF_JPY_H1.pkl  CHF_JPY_H4.pkl  EUR_AUD_H1.pkl  EUR_AUD_H4.pkl  EUR_CAD_H1.pkl  EUR_CAD_H4.pkl  EUR_CHF_H1.pkl  EUR_CHF_H4.pkl  EUR_GBP_H1.pkl  EUR_GBP_H4.pkl  EUR_JPY_H1.pkl  EUR_JPY_H4.pkl  EUR_NZD_H1.pkl  EUR_NZD_H4.pkl  EUR_USD_H1.pkl  EUR_USD_H4.pkl  GBP_AUD_H1.pkl  GBP_AUD_H4.pkl  GBP_CAD_H1.pkl  GBP_CAD_H4.pkl  GBP_CHF_H1.pkl  GBP_CHF_H4.pkl  GBP_JPY_H1.pkl  GBP_JPY_H4.pkl  GBP_NZD_H1.pkl  GBP_NZD_H4.pkl  (+18 more)
db/: db.py
defs/: constants.py
exploration/: Guru_1_EMA200_RSI_OVER50_Spread.ipynb  Guru_2_MACD_EMA_Results.ipynb  Guru_stategy_1.ipynb  Guru_strategy_2.ipynb  MA_Test.ipynb  MA_cross_AN.ipynb  api_test.ipynb  calendar_data.ipynb  candle_patterns.ipynb  indicators.ipynb  plotting.ipynb  plotting.py  plotting_candles.ipynb  test_patterns.ipynb  vix_based_stragetegy.ipynb
infrastructure/: collect_data.py  instrument_collection.py  log_wrapper.py
models/: api_price.py  open_trade.py  (+6 more)
(+38 files in other folders)
