[tool.poetry]
name = "trade-framework"
version = "0.1.0"
description = ""
authors = ["otavius <developer.otavius@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
pandas = "^2.2.3"
python-decouple = "^3.8"
plotly = "^6.1.2"
nbformat = ">=4.2.0"
xlsxwriter = "^3.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
